--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.2",
     "next": "12.0.10",
+    "postcss": "^8.4.6",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
