--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-keycloak/nextjs": "^2.0.0-beta.10",
     "autoprefixer": "^10.4.2",
     "next": "12.0.10",
     "postcss": "^8.4.6",
