--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-keycloak/nextjs": "^2.0.0-beta.10",
     "autoprefixer": "^10.4.2",
+    "http": "0.0.1-security",
+    "keycloak-js": "11.0.3",
+    "cookie": "^0.4.2",
     "next": "12.0.10",
     "postcss": "^8.4.6",
     "react": "17.0.2",
@@ -20,6 +22,7 @@
     "@types/react": "17.0.39",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
+    "@react-keycloak/ssr": "^3.3.0",
     "tailwindcss": "^3.0.23",
     "typescript": "4.5.5"
   }
