--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.2",
+    "cookie": "^0.4.2",
     "http": "0.0.1-security",
     "keycloak-js": "11.0.3",
-    "cookie": "^0.4.2",
     "next": "12.0.10",
     "postcss": "^8.4.6",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@react-keycloak/ssr": "^3.3.0",
+    "@types/cookie": "^0.4.1",
     "@types/node": "17.0.18",
     "@types/react": "17.0.39",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
-    "@react-keycloak/ssr": "^3.3.0",
     "tailwindcss": "^3.0.23",
     "typescript": "4.5.5"
   }
