--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
     "tailwindcss": "^3.0.23",
-    "typescript": "4.5.5"
+    "typescript": "4.5.5",
+    "webpack-bundle-analyzer": "^4.5.0"
   }
 }
